tests/virtual_machines_example/vm_cirrus.yaml
apiVersion: kubevirt.io/v1alpha3
kind: VirtualMachine
metadata:
  name: cirrus-vm-1
  namespace: default
spec:
  running: false
  template:
    metadata:
      labels:
        kubevirt.io/vm: cirrus-vm-1
        kubevirt.io/size: small
        kubevirt.io/os: linux
        kubevirt.io/domain: default
    spec:
      domain:
        cpu:
          cores: 1
        devices:
          disks:
          - name: registry-disk0
            disk:
              bus: virtio
          - name: cloudinitdisk
            disk:
              bus: virtio
        resources:
          requests:
            memory: 128M
      volumes:
        - name: registry-disk0
          containerDisk:
            image: kubevirt/cirros-registry-disk-demo
        - name: cloudinitdisk
          cloudInitNoCloud:
            userDataBase64: SGkuXG4=
